[gd_scene load_steps=8 format=3 uid="uid://c1xspvmlmtvcd"]

[ext_resource type="Script" uid="uid://c2sq2uq1fii65" path="res://scripts/bedroom/paper.gd" id="1_cbjgq"]
[ext_resource type="Shader" uid="uid://co5gqgupj2yu7" path="res://shaders/level_1_painting.gdshader" id="2_jhmja"]
[ext_resource type="Texture2D" uid="uid://bqdarpnpmlbu6" path="res://assets/FancyMansion_Furniture/fancy_mansion_furnitureset.png" id="3_g4oad"]
[ext_resource type="Texture2D" uid="uid://64vj00hpykom" path="res://assets/FancyMansion_Furniture/mccoy_painting.png" id="4_yippq"]
[ext_resource type="Texture2D" uid="uid://cx5upe7u18new" path="res://assets/world_scene/text-box.png" id="5_qpr2r"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hhfj6"]
shader = ExtResource("2_jhmja")
shader_parameter/line_color = Color(1, 0.34509805, 0, 1)
shader_parameter/line_thickness = 1.322000062795

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hhfj6"]
size = Vector2(16, 37)

[node name="Paper" type="Node2D"]
z_index = 50
script = ExtResource("1_cbjgq")

[node name="PaperSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_hhfj6")
position = Vector2(326, 36)
texture = ExtResource("3_g4oad")
centered = false
region_enabled = true
region_rect = Rect2(192, 110, 17, 18)

[node name="PaperArea" type="Area2D" parent="."]
position = Vector2(-41, -17)

[node name="PaperCollision" type="CollisionShape2D" parent="PaperArea"]
position = Vector2(375, 70.5)
shape = SubResource("RectangleShape2D_hhfj6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 368.0
offset_right = 784.0
offset_bottom = 480.0
texture = ExtResource("4_yippq")
stretch_mode = 5

[node name="Panel" type="Panel" parent="CanvasLayer"]
modulate = Color(0.20511743, 0.20511743, 0.20511743, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
offset_left = 320.0
offset_top = 464.0
offset_right = 820.0
offset_bottom = 614.0
texture = ExtResource("5_qpr2r")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="CanvasLayer/NinePatchRect"]
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.5
offset_top = -50.5
offset_right = 228.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Theodore Fitzgerald McCoy
1832 - 1901
\"Static in paint, yet a traveler at heart. 
Look not at my face, but at the sphere where nations part.\""
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="PaperArea" to="." method="_on_paper_entered"]
[connection signal="body_exited" from="PaperArea" to="." method="_on_paper_exited"]
